# QtPDF

./: CMakeLists.txt  README.md  main.cpp  main.h
pdf/: Makefile  qtpdf-config.pri
pdfwidgets/: qtpdfwidgets-config.pri
